# automagica

./: .flake8  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  TODO.md  Untitled.ipynb  babel.cfg  meta.yaml  pyproject.toml  requirements-development.txt  run_tests.sh  setup.py  test.json
automagica/: __init__.py  activities.py  auth.py  bot.py  bots.py  capture.py  cli.py  command_line.py  config.py  flow.py  gui.py  httpclient.py  keybinds.py  nodes.py  protocol.py  recorder.py  robot.py  snippingtool.py  utilities.py
automagica/activities/: __init__.py
automagica/gui/: __init__.py  apps.py  buttons.py  frames.py  graphs.py  inputs.py  windows.py
automagica/models/: __init__.py  bots.py  flow.py  nodes.py
docker/: supervisord.conf
docker/fluxbox/: menu
docs/: Makefile  conf.py  index.md  make.bat  readme.md  requirements.txt
docs/legacy_docs/: Makefile
docs/manual/: FTP.ipynb  Intro.ipynb  Outlook.ipynb
docs/portal/: activities.json  parser.ipynb
docs/source/: activities.rst  automagica.rst  bot.md  cli.md  conf.py  developers.md  docker.md  flow.md  get_started.md  (+10 more)
examples/: Excel Examples.ipynb  browser_automation_example.ipynb  excel_automation_example.ipynb  ocr_automation_example.ipynb  paint_image.py  ppt_automation_example.ipynb  recorder_example_calculator.ipynb  rpa_challenge_com_solution.ipynb
locale/: base.pot
portal/: activities.json
tests/: conftest.py  pytest.ini  test_activities.py  test_bot.py  test_flow.py  test_lab.py  test_other_gui.py  test_script.py  test_wand.py
(+112 files in other folders)
