[tool.poetry]
name = "Automagica"
version = "3.2.2"
description = "Smart Robotic Process Automation"
authors = ["Oakwood Technologies BVBA"]

[tool.poetry.dependencies]
python = "^3.7"
urllib3 = {extras = ["secure"], version = "^1.25.10"}
selenium = "4.0.0a6.post2"
openpyxl = "3.0.5"
python-docx = "0.8.10"
PyPDF2 = "1.26.0"
mimesis = "4.1.2"
psutil = "5.7.2"
keyring = "21.4.0"
cryptography = "3.1"
pyad = "0.6.0"
Pillow = "7.2.0"
pysnmp = "4.4.12"
pandas = "1.1.1"
mss = "5.1.0"
mouse = "0.7.1"
keyboard = "0.13.5"
babel = "2.8.0"
pyglet = "1.5.7"
notebook = "6.1.3"

[tool.black]
line-length = 79

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=automagica --cov-report xml:cov.xml"
testpaths = ["tests"]
markers = ["smoke: signal big problems"]